--- a/mail-filter/spamassassin/ChangeLog
+++ b/mail-filter/spamassassin/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for mail-filter/spamassassin
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/mail-filter/cvs-repo/gentoo-x86/mail-filter/spamassassin/ChangeLog,v 1.139 2007/05/06 19:45:07 ticho Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/mail-filter/cvs-repo/gentoo-x86/mail-filter/spamassassin/ChangeLog,v 1.140 2007/05/08 13:37:18 armin76 Exp $
+
+  08 May 2007; Raúl Porcel <armin76@gentoo.org>
+  spamassassin-3.2.0-r1.ebuild:
+  Add ~ia64 wrt bug 177144
 
   06 May 2007; Andrej Kacian <ticho@gentoo.org>
   spamassassin-3.2.0-r1.ebuild:
