--- a/dev-java/relaxngcc/ChangeLog
+++ b/dev-java/relaxngcc/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-java/relaxngcc
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/relaxngcc/ChangeLog,v 1.2 2007/05/05 15:39:26 caster Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/relaxngcc/ChangeLog,v 1.3 2007/05/08 15:04:48 nelchael Exp $
+
+  08 May 2007; Krzysiek Pawlik <nelchael@gentoo.org> relaxngcc-1.12.ebuild:
+  Fix building with USE="doc", see bug #177646.
 
   05 May 2007; Vlastimil Babka <caster@gentoo.org> relaxngcc-1.12.ebuild:
   Remove -i from cp.
