--- a/kde-base/kdebase/ChangeLog
+++ b/kde-base/kdebase/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kdebase
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kdebase/Attic/ChangeLog,v 1.360 2007/05/06 12:14:49 carlo Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kdebase/Attic/ChangeLog,v 1.361 2007/05/08 20:27:04 carlo Exp $
+
+  08 May 2007; Carsten Lohrke <carlo@gentoo.org> kdebase-3.5.6-r3.ebuild:
+  Ebuild was missing virtual/ssh as runtime dependency.
 
   06 May 2007; Carsten Lohrke <carlo@gentoo.org> kdebase-3.5.5-r4.ebuild:
   Stable on x86.
