--- a/net-analyzer/nagios-plugins/ChangeLog
+++ b/net-analyzer/nagios-plugins/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-analyzer/nagios-plugins
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/nagios-plugins/ChangeLog,v 1.57 2007/03/12 01:07:25 mjolnir Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/nagios-plugins/ChangeLog,v 1.58 2007/05/08 21:38:01 dertobi123 Exp $
+
+  08 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  nagios-plugins-1.4.6.ebuild:
+  Use a valid home-directory for nagios by Wolfram Schlich, bug #156068
 
 *nagios-plugins-1.4.6 (12 Mar 2007)
 
