--- a/kde-base/umbrello/ChangeLog
+++ b/kde-base/umbrello/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for kde-base/umbrello
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/umbrello/ChangeLog,v 1.64 2007/04/13 18:18:12 philantrop Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/umbrello/ChangeLog,v 1.65 2007/05/09 16:35:14 carlo Exp $
+
+*umbrello-3.5.6-r2 (09 May 2007)
+
+  09 May 2007; Carsten Lohrke <carlo@gentoo.org> +umbrello-3.5.6-r2.ebuild:
+  Umbrello branch update to version 1.5.61.
 
 *umbrello-3.5.6-r1 (13 Apr 2007)
 *umbrello-3.5.5-r1 (13 Apr 2007)
