--- a/app-vim/align/ChangeLog
+++ b/app-vim/align/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for app-vim/align
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-vim/cvs-repo/gentoo-x86/app-vim/align/ChangeLog,v 1.44 2007/03/17 18:18:31 beandog Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-vim/cvs-repo/gentoo-x86/app-vim/align/ChangeLog,v 1.45 2007/05/09 19:25:05 pioto Exp $
+
+*align-35 (09 May 2007)
+
+  09 May 2007; Mike Kelly <pioto@gentoo.org> +align-35.ebuild:
+  Version bump. Now requires vim 7.0.
 
   17 Mar 2007; Steve Dibb <beandog@gentoo.org> align-33.ebuild:
   amd64 stable
