--- a/app-admin/setools/ChangeLog
+++ b/app-admin/setools/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for app-admin/setools
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/setools/ChangeLog,v 1.50 2007/02/16 00:54:14 pebenito Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/setools/ChangeLog,v 1.51 2007/05/10 03:14:19 pebenito Exp $
+
+*setools-3.2 (09 May 2007)
+
+  09 May 2007; Chris PeBenito <pebenito@gentoo.org> +setools-3.2.ebuild:
+  New upstream release.
 
 *setools-3.1 (16 Feb 2007)
 
