--- a/dev-lang/php/ChangeLog
+++ b/dev-lang/php/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-lang/php
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-lang/cvs-repo/gentoo-x86/dev-lang/php/ChangeLog,v 1.166 2007/05/09 21:00:48 chtekk Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-lang/cvs-repo/gentoo-x86/dev-lang/php/ChangeLog,v 1.167 2007/05/10 09:11:29 yoswink Exp $
+
+  10 May 2007; Jose Luis Rivero <yoswink@gentoo.org> php-5.2.2-r1.ebuild:
+  Stable on alpha wrt security bug #169372
 
   09 May 2007; Luca Longinotti <chtekk@gentoo.org> php-4.4.7.ebuild,
   php-5.2.2-r1.ebuild:
