--- a/media-plugins/vdr-streamdev-server/ChangeLog
+++ b/media-plugins/vdr-streamdev-server/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-plugins/vdr-streamdev-server
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/vdr-streamdev-server/Attic/ChangeLog,v 1.16 2007/05/10 15:45:27 hd_brummy Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/vdr-streamdev-server/Attic/ChangeLog,v 1.17 2007/05/10 15:51:43 hd_brummy Exp $
+
+  10 May 2007; Joerg Bornkessel <hd_brummy@gentoo.org>
+  vdr-streamdev-server-0.3.3_pre20070510.ebuild:
+  small fix
 
   10 May 2007; Joerg Bornkessel <hd_brummy@gentoo.org>
   +files/vdr-streamdev-server-0.3.3_pre20070510-gentoo.diff,
