--- a/sys-kernel/gentoo-sources/ChangeLog
+++ b/sys-kernel/gentoo-sources/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sys-kernel/gentoo-sources
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/gentoo-sources/ChangeLog,v 1.393 2007/05/07 14:38:20 gustavoz Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/gentoo-sources/ChangeLog,v 1.394 2007/05/10 19:20:18 kloeri Exp $
+
+  10 May 2007; Bryan Østergaard <kloeri@gentoo.org>
+  gentoo-sources-2.6.21.ebuild:
+  Add ~alpha and ~ia64 keywords.
 
   07 May 2007; Gustavo Zacarias <gustavoz@gentoo.org>
   gentoo-sources-2.6.20-r8.ebuild:
