--- a/sys-fs/squashfs-tools/ChangeLog
+++ b/sys-fs/squashfs-tools/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sys-fs/squashfs-tools
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-fs/cvs-repo/gentoo-x86/sys-fs/squashfs-tools/ChangeLog,v 1.46 2007/03/28 13:35:29 armin76 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-fs/cvs-repo/gentoo-x86/sys-fs/squashfs-tools/ChangeLog,v 1.47 2007/05/11 05:00:22 kumba Exp $
+
+  11 May 2007; Joshua Kinard <kumba@gentoo.org>
+  squashfs-tools-3.1_p2.ebuild:
+  Stable on mips, per #165289.
 
   28 Mar 2007; Raúl Porcel <armin76@gentoo.org>
   squashfs-tools-3.1_p2.ebuild:
