--- a/net-wireless/bluez-gnome/ChangeLog
+++ b/net-wireless/bluez-gnome/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-wireless/bluez-gnome
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-wireless/cvs-repo/gentoo-x86/net-wireless/bluez-gnome/Attic/ChangeLog,v 1.2 2007/05/11 19:11:59 betelgeuse Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-wireless/cvs-repo/gentoo-x86/net-wireless/bluez-gnome/Attic/ChangeLog,v 1.3 2007/05/11 21:12:13 gustavoz Exp $
+
+  11 May 2007; Gustavo Zacarias <gustavoz@gentoo.org>
+  bluez-gnome-0.6.ebuild:
+  Keyworded ~sparc wrt #178071
 
   11 May 2007; Petteri Räty <betelgeuse@gentoo.org>
   +files/0.6-linking-order.patch, bluez-gnome-0.6.ebuild:
