--- a/net-wireless/bluez-libs/ChangeLog
+++ b/net-wireless/bluez-libs/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-wireless/bluez-libs
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-wireless/cvs-repo/gentoo-x86/net-wireless/bluez-libs/Attic/ChangeLog,v 1.78 2007/05/11 16:01:11 betelgeuse Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-wireless/cvs-repo/gentoo-x86/net-wireless/bluez-libs/Attic/ChangeLog,v 1.79 2007/05/11 21:08:13 gustavoz Exp $
+
+  11 May 2007; Gustavo Zacarias <gustavoz@gentoo.org>
+  bluez-libs-3.10.ebuild:
+  Keyworded ~sparc wrt #178071
 
 *bluez-libs-3.10 (11 May 2007)
 
