--- a/kde-base/kdesdk-kioslaves/ChangeLog
+++ b/kde-base/kdesdk-kioslaves/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kdesdk-kioslaves
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kdesdk-kioslaves/ChangeLog,v 1.57 2007/05/11 17:35:59 carlo Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kdesdk-kioslaves/ChangeLog,v 1.58 2007/05/11 22:10:20 carlo Exp $
+
+  11 May 2007; Carsten Lohrke <carlo@gentoo.org>
+  kdesdk-kioslaves-3.5.6-r1.ebuild:
+  Fix ugly typo.
 
   11 May 2007; Carsten Lohrke <carlo@gentoo.org>
   kdesdk-kioslaves-3.5.6-r1.ebuild:
