--- a/sys-cluster/mpiexec/ChangeLog
+++ b/sys-cluster/mpiexec/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sys-cluster/mpiexec
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-cluster/cvs-repo/gentoo-x86/sys-cluster/mpiexec/Attic/ChangeLog,v 1.18 2007/05/12 00:05:45 dberkholz Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-cluster/cvs-repo/gentoo-x86/sys-cluster/mpiexec/Attic/ChangeLog,v 1.19 2007/05/12 00:07:32 dberkholz Exp $
+
+  12 May 2007; Donnie Berkholz <dberkholz@gentoo.org>;
+  mpiexec-0.76-r1.ebuild:
+  Replace torque/openpbs deps with virtual/pbs.
 
   12 May 2007; Donnie Berkholz <dberkholz@gentoo.org>; -mpiexec-0.75.ebuild:
   (#153495) Pull version that only works with openpbs, which we removed for
