--- a/sys-cluster/maui/ChangeLog
+++ b/sys-cluster/maui/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sys-cluster/maui
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-cluster/cvs-repo/gentoo-x86/sys-cluster/maui/ChangeLog,v 1.6 2007/04/26 06:08:16 dberkholz Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-cluster/cvs-repo/gentoo-x86/sys-cluster/maui/ChangeLog,v 1.7 2007/05/12 00:10:05 dberkholz Exp $
+
+  12 May 2007; Donnie Berkholz <dberkholz@gentoo.org>;
+  maui-3.2.6_p16.ebuild:
+  Remove blocker on old openpbs, since it's out of the tree.
 
   26 Apr 2007; Donnie Berkholz <dberkholz@gentoo.org>; metadata.xml:
   Update for cluster herd split to hp-cluster and ha-cluster.
