--- a/dev-php4/pecl-apc/ChangeLog
+++ b/dev-php4/pecl-apc/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-php4/pecl-apc
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-php4/cvs-repo/gentoo-x86/dev-php4/pecl-apc/Attic/ChangeLog,v 1.22 2007/03/08 23:18:40 chtekk Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-php4/cvs-repo/gentoo-x86/dev-php4/pecl-apc/Attic/ChangeLog,v 1.23 2007/05/12 02:58:11 chtekk Exp $
+
+  12 May 2007; Luca Longinotti <chtekk@gentoo.org>
+  pecl-apc-3.0.12_p2.ebuild, pecl-apc-3.0.13.ebuild:
+  Apache 1.X masking.
 
   08 Mar 2007; Luca Longinotti <chtekk@gentoo.org>
   +files/pecl-apc-3.0.13-tsrm.patch, pecl-apc-3.0.13.ebuild:
