--- a/dev-java/commons-vfs/ChangeLog
+++ b/dev-java/commons-vfs/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/commons-vfs
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/commons-vfs/ChangeLog,v 1.2 2007/05/06 18:08:45 caster Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/commons-vfs/ChangeLog,v 1.3 2007/05/12 10:39:17 ali_bush Exp $
+
+  12 May 2007; Alistair John Bush <ali_bush@gentoo.org>
+  commons-vfs-1.0.ebuild:
+  Added to ~amd64
 
   06 May 2007; Vlastimil Babka <caster@gentoo.org> commons-vfs-1.0.ebuild:
   Fix sandbox issue.
