--- a/media-video/kmplayer/ChangeLog
+++ b/media-video/kmplayer/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-video/kmplayer
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/kmplayer/ChangeLog,v 1.98 2007/05/12 10:13:29 beandog Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/kmplayer/ChangeLog,v 1.99 2007/05/12 11:37:12 corsair Exp $
+
+  12 May 2007; Markus Rothe <corsair@gentoo.org> kmplayer-0.9.4a-r1.ebuild:
+  Stable on ppc64; bug #176893
 
   12 May 2007; Steve Dibb <beandog@gentoo.org> kmplayer-0.9.4a-r1.ebuild:
   amd64 stable, bug 176893
