--- a/app-admin/python-updater/ChangeLog
+++ b/app-admin/python-updater/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-admin/python-updater
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/python-updater/ChangeLog,v 1.9 2007/05/11 22:04:54 kloeri Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/python-updater/ChangeLog,v 1.10 2007/05/12 11:40:22 corsair Exp $
+
+  12 May 2007; Markus Rothe <corsair@gentoo.org> python-updater-0.2.ebuild:
+  Added ~ppc64; bug #177270
 
   11 May 2007; Bryan Østergaard <kloeri@gentoo.org>
   python-updater-0.2.ebuild:
