--- a/dev-php4/eaccelerator/ChangeLog
+++ b/dev-php4/eaccelerator/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-php4/eaccelerator
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-php4/cvs-repo/gentoo-x86/dev-php4/eaccelerator/Attic/ChangeLog,v 1.20 2007/03/06 15:16:35 chtekk Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-php4/cvs-repo/gentoo-x86/dev-php4/eaccelerator/Attic/ChangeLog,v 1.21 2007/05/12 14:33:50 chtekk Exp $
+
+  12 May 2007; Luca Longinotti <chtekk@gentoo.org>
+  eaccelerator-0.9.5.ebuild:
+  Fix require_php_sapi_from usage wrt apache1.
 
   06 Mar 2007; Luca Longinotti <chtekk@gentoo.org>
   eaccelerator-0.9.5.ebuild:
