--- a/dev-perl/Snowball-Norwegian/ChangeLog
+++ b/dev-perl/Snowball-Norwegian/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/Snowball-Norwegian
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Snowball-Norwegian/ChangeLog,v 1.12 2007/03/12 16:58:17 mcummings Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Snowball-Norwegian/ChangeLog,v 1.13 2007/05/12 14:39:49 mcummings Exp $
+
+*Snowball-Norwegian-1.2 (12 May 2007)
+
+  12 May 2007; Michael Cummings <mcummings@gentoo.org>
+  +Snowball-Norwegian-1.2.ebuild:
+  Version bump
 
 *Snowball-Norwegian-1.0-r1 (12 Mar 2007)
 
