--- a/app-crypt/gnupg/ChangeLog
+++ b/app-crypt/gnupg/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-crypt/gnupg
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-crypt/cvs-repo/gentoo-x86/app-crypt/gnupg/ChangeLog,v 1.288 2007/05/12 15:23:20 corsair Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-crypt/cvs-repo/gentoo-x86/app-crypt/gnupg/ChangeLog,v 1.289 2007/05/12 20:43:41 kumba Exp $
+
+  12 May 2007; Joshua Kinard <kumba@gentoo.org> gnupg-1.4.7-r1.ebuild:
+  Stable on mips, per #177747.
 
   12 May 2007; Markus Rothe <corsair@gentoo.org> gnupg-1.4.7-r1.ebuild:
   Stable on ppc64; bug #177747
