--- a/dev-lang/python/ChangeLog
+++ b/dev-lang/python/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-lang/python
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-lang/cvs-repo/gentoo-x86/dev-lang/python/ChangeLog,v 1.247 2007/05/12 17:13:06 armin76 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-lang/cvs-repo/gentoo-x86/dev-lang/python/ChangeLog,v 1.248 2007/05/12 22:15:24 uberlord Exp $
+
+  12 May 2007; Roy Marples <uberlord@gentoo.org> python-2.4.4-r4.ebuild:
+  Added ~sparc-fbsd keyword.
 
   12 May 2007; Raúl Porcel <armin76@gentoo.org> python-2.4.4-r4.ebuild:
   ia64 + x86 stable wrt security bug #177804
