--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for profile directory
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/profiles/cvs-repo/gentoo-x86/profiles/ChangeLog,v 1.370 2007/05/11 15:52:04 armin76 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/profiles/cvs-repo/gentoo-x86/profiles/ChangeLog,v 1.371 2007/05/13 02:18:42 dirtyepic Exp $
+
+  13 May 2007; Ryan Hill <dirtyepic@gentoo.org> package.mask:
+  Mask new net-fs/sfs for testing.
 
   11 May 2007; Raúl Porcel <armin76@gentoo.org> package.mask:
   net-misc/aria has been removed, bug 153355
