--- a/dev-util/giggle/ChangeLog
+++ b/dev-util/giggle/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-util/giggle
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/giggle/Attic/ChangeLog,v 1.2 2007/05/13 04:55:33 compnerd Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/giggle/Attic/ChangeLog,v 1.3 2007/05/13 05:06:16 compnerd Exp $
+
+*giggle-0.3 (13 May 2007)
+
+  13 May 2007; Saleem Abdulrasool <compnerd@gentoo.org> +giggle-0.3.ebuild:
+  Version bump from upstream
 
   13 May 2007; Saleem Abdulrasool <compnerd@gentoo.org> giggle-0.2.ebuild:
   Fix the really broken dependencies
