--- a/media-libs/freetype/ChangeLog
+++ b/media-libs/freetype/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/freetype
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/freetype/ChangeLog,v 1.135 2007/05/12 11:58:38 chtekk Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/freetype/ChangeLog,v 1.136 2007/05/13 14:10:35 nixnut Exp $
+
+  13 May 2007; nixnut <nixnut@gentoo.org> freetype-2.3.3.ebuild:
+  Stable on ppc wrt bug 173804
 
   12 May 2007; Luca Longinotti <chtekk@gentoo.org>
   -files/digest-freetype-2.3.4:
