--- a/net-analyzer/oinkmaster/ChangeLog
+++ b/net-analyzer/oinkmaster/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-analyzer/oinkmaster
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/oinkmaster/ChangeLog,v 1.17 2007/03/20 18:37:05 armin76 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/oinkmaster/ChangeLog,v 1.18 2007/05/13 17:29:51 beandog Exp $
+
+  13 May 2007; Steve Dibb <beandog@gentoo.org> oinkmaster-2.0.ebuild:
+  amd64 stable
 
   20 Mar 2007; Raúl Porcel <armin76@gentoo.org> oinkmaster-2.0.ebuild:
   x86 stable
