--- a/net-mail/offlineimap/ChangeLog
+++ b/net-mail/offlineimap/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-mail/offlineimap
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-mail/cvs-repo/gentoo-x86/net-mail/offlineimap/ChangeLog,v 1.29 2007/02/22 01:48:41 peper Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-mail/cvs-repo/gentoo-x86/net-mail/offlineimap/ChangeLog,v 1.30 2007/05/13 17:46:25 beandog Exp $
+
+  13 May 2007; Steve Dibb <beandog@gentoo.org> offlineimap-4.0.13.ebuild:
+  amd64 stable
 
   22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
   Transition to Manifest2.
