--- a/dev-java/sun-jre-bin/ChangeLog
+++ b/dev-java/sun-jre-bin/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/sun-jre-bin
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/sun-jre-bin/ChangeLog,v 1.87 2007/05/13 16:22:44 betelgeuse Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/sun-jre-bin/ChangeLog,v 1.88 2007/05/13 19:38:02 armin76 Exp $
+
+  13 May 2007; Raúl Porcel <armin76@gentoo.org>
+  sun-jre-bin-1.6.0-r1.ebuild:
+  x86 stable wrt bug #177842
 
   13 May 2007; Petteri Räty <betelgeuse@gentoo.org>
   sun-jre-bin-1.6.0-r1.ebuild:
