--- a/media-sound/lilypond/ChangeLog
+++ b/media-sound/lilypond/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for media-sound/lilypond
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/lilypond/ChangeLog,v 1.51 2007/05/13 15:12:07 hkbst Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/lilypond/ChangeLog,v 1.52 2007/05/14 13:19:44 hkbst Exp $
+
+*lilypond-2.11.23 (14 May 2007)
+
+  14 May 2007; Marijn Schouten <hkBst@gentoo.org> +lilypond-2.11.23.ebuild:
+  add development version
 
 *lilypond-2.10.23 (13 May 2007)
 
