--- a/app-text/mxml2man/ChangeLog
+++ b/app-text/mxml2man/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-text/mxml2man
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-text/cvs-repo/gentoo-x86/app-text/mxml2man/Attic/ChangeLog,v 1.3 2007/03/19 03:26:34 kloeri Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-text/cvs-repo/gentoo-x86/app-text/mxml2man/Attic/ChangeLog,v 1.4 2007/05/14 20:13:36 bangert Exp $
+
+  14 May 2007; Thilo Bangert <bangert@gentoo.org> metadata.xml:
+  add <herd>no-herd</herd>
 
   19 Mar 2007; Bryan Østergaard <kloeri@gentoo.org> metadata.xml:
   Remove flameeyes from metadata.xml due to retirement.
