--- a/dev-util/bless/ChangeLog
+++ b/dev-util/bless/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/bless
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/bless/ChangeLog,v 1.8 2007/05/14 20:24:33 compnerd Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/bless/ChangeLog,v 1.9 2007/05/14 20:35:41 compnerd Exp $
+
+  14 May 2007; Saleem Abdulrasool <compnerd@gentoo.org> bless-0.5.0.ebuild:
+  Add scrollkeeper to the dependencies as per bug #177635
 
   14 May 2007; Saleem Abdulrasool <compnerd@gentoo.org> -bless-0.4.1.ebuild:
   prune unused versions
