--- a/app-emacs/limit/ChangeLog
+++ b/app-emacs/limit/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for app-emacs/limit
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-emacs/cvs-repo/gentoo-x86/app-emacs/limit/ChangeLog,v 1.18 2007/03/07 10:04:24 opfer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-emacs/cvs-repo/gentoo-x86/app-emacs/limit/ChangeLog,v 1.19 2007/05/15 09:38:06 ulm Exp $
+
+  15 May 2007; Ulrich Mueller <ulm@gentoo.org>
+  limit-1.14.9_pre20041001.ebuild:
+  Prepare for new-style virtual/flim: change blocking dependency from
+  !virtual/flim to !app-emacs/flim.
 
   07 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
   files/60flim-gentoo.el:
