--- a/net-news/liferea/ChangeLog
+++ b/net-news/liferea/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-news/liferea
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-news/cvs-repo/gentoo-x86/net-news/liferea/ChangeLog,v 1.100 2007/05/14 14:39:51 dang Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-news/cvs-repo/gentoo-x86/net-news/liferea/ChangeLog,v 1.101 2007/05/15 14:08:03 bangert Exp $
+
+  15 May 2007; Thilo Bangert <bangert@gentoo.org> metadata.xml:
+  add <herd>no-herd</herd>
 
   14 May 2007; Daniel Gryniewicz <dang@gentoo.org> -liferea-1.2.8.ebuild,
   -liferea-1.2.12.ebuild:
